force-app/main/default/objects/Monitoring__c/Monitoring__c.object-meta.xml
<CustomObject>
    <label>Monitoring</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Monitoring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monitorings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>