force-app/main/default/objects/Monitoring__c/fields/Last_Monitoring_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Monitoring_Date__c</fullName>
    <label>Last Monitoring Date</label>
    <type>Date</type>
</CustomField>