force-app/main/default/objects/Monitoring__c/fields/Monitoring_Completed__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Completed__c</fullName>
    <label>Monitoring Completed</label>
    <type>Date</type>
</CustomField>