force-app/main/default/objects/Monitoring__c/fields/Monitoring_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Started_Date__c</fullName>
    <label>Monitoring Started Date</label>
    <type>Date</type>
</CustomField>