force-app/main/default/objects/Monitoring__c/fields/Monitoring_Status__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Status__c</fullName>
    <label>Monitoring Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Monitoring_Status</valueSetName>
    </valueSet>
</CustomField>