force-app/main/default/objects/Monitoring__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Periodic KYC review</fullName>
            </value>
            <value>
                <fullName>Merchant Notified</fullName>
            </value>
            <value>
                <fullName>Event/Trigger based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>