force-app/main/default/objects/Monitoring__c/fields/Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reason_Comment__c</fullName>
    <label>Reason Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>